// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: <Progress/> Progress should pass all the other props to the Ant Progress component 1`] = `
<div
  className="Progress"
>
  <Progress
    percent={20}
    showInfo={false}
    status="exception"
  />
  <div
    className="Progress-text"
    style={
      Object {
        "left": "10%",
      }
    }
  >
    20
     %
  </div>
</div>
`;

exports[`component: <Progress/> Progress should render without crashing 1`] = `
<div
  className="Progress"
>
  <Progress
    percent={0}
    showInfo={false}
  />
  <div
    className="Progress-text"
    style={
      Object {
        "left": "0%",
      }
    }
  >
    0
     %
  </div>
</div>
`;
